--- a/refs.bib
+++ b/refs.bib
@@ -28285,3 +28285,23 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191103582N},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{zink20,
+       author = {{Zink}, Jon K. and {Hardegree-Ullman}, Kevin K. and
+         {Christiansen}, Jessie L. and {Dressing}, Courtney D. and
+         {Crossfield}, Ian J.~M. and {Petigura}, Erik A. and
+         {Schlieder}, Joshua E. and {Ciardi}, David R.},
+        title = "{Scaling K2. II. Assembly of a Fully Automated C5 Planet Candidate Catalog Using EDI-Vetter}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2020",
+        month = "Jan",
+          eid = {arXiv:2001.11515},
+        pages = {arXiv:2001.11515},
+archivePrefix = {arXiv},
+       eprint = {2001.11515},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200111515Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
