updated density table and added blurbs about BIC

--- a/densitytable.tex
+++ b/densitytable.tex
@@ -5,28 +5,31 @@
 \tablehead{Planet & $P$ & $F$ & $r_p$ & $m_p$ & $\rho_p$ & Composition & Refs. \\
 name & $[$days$]$ & $[$F$_{\oplus}]$ & $[$R$_{\oplus}]$ & $[$M$_{\oplus}]$ & $[$g cm$^{-3}]$ & disposition & }
 \startdata
-GJ 357b & 3.93072 & 13.2$\pm$ 1.4 & 1.22$\pm$ 0.08 & 1.84$\pm$ 0.31 & 5.67$^{+1.75}_{-1.35}$ & Rock & 1 \\
-GJ 1132b & 1.62892 & 19.4$\pm$ 4.0 & 1.13$\pm$ 0.06 & 1.66$\pm$ 0.23 & 6.39$^{+1.36}_{-1.30}$ & Rock & 2,3 \\
-GJ 1214b & 1.58040 & 22.2$\pm$ 3.0 & 2.85$\pm$ 0.20 & 6.26$\pm$ 0.86 & 1.50$^{+0.44}_{-0.34}$ & Gas & 4 \\
-GJ 9827b & 1.20898 & 326.9$\pm$ 16.3 & 1.58$\pm$ 0.03 & 4.91$\pm$ 0.49 & 6.95$^{+0.81}_{-0.71}$ & Rock & 5 \\
-GJ 9827c & 6.20147 & 37.0$\pm$ 1.8 & 2.02$\pm$ 0.05 & 4.04$\pm$ 0.84 & 2.71$^{+0.57}_{-0.55}$ & Am & 5 \\
-HD 219134b & 3.09293 & 176.7$\pm$ 5.5 & 1.60$\pm$ 0.06 & 4.74$\pm$ 0.19 & 6.40$^{+0.75}_{-0.69}$ & Rock & 6 \\
-HD 219134c & 6.76458 & 62.3$\pm$ 1.9 & 1.51$\pm$ 0.05 & 4.36$\pm$ 0.22 & 7.01$^{+0.83}_{-0.71}$ & Rock & 6 \\
-K2-18b & 32.93962 & 1.2$\pm$ 0.1 & 2.71$\pm$ 0.07 & 8.63$\pm$ 1.35 & 2.40$^{+0.41}_{-0.40}$ & Gas & 7,8 \\
-K2-146b & 2.64460 & 19.2$\pm$ 2.0 & 2.05$\pm$ 0.06 & 5.77$\pm$ 0.18 & 3.72$^{+0.34}_{-0.30}$ & Am & 9 \\
-K2-146c & 4.00498 & 11.0$\pm$ 1.1 & 2.19$\pm$ 0.07 & 7.49$\pm$ 0.24 & 3.96$^{+0.38}_{-0.38}$ & Am & 9 \\
-Kepler-80b & 7.05246 & 41.8$\pm$ 4.8 & 2.67$\pm$ 0.10 & 6.93$\pm$ 0.70 & 2.02$^{+0.43}_{-0.35}$ & Gas & 10 \\
-Kepler-80c & 9.52355 & 28.0$\pm$ 3.2 & 2.74$\pm$ 0.12 & 6.74$\pm$ 0.86 & 1.82$^{+0.45}_{-0.39}$ & Gas & 10 \\
-Kepler-80d & 3.07222 & 126.5$\pm$ 14.5 & 1.53$\pm$ 0.09 & 6.75$\pm$ 0.51 & 10.46$^{+2.30}_{-2.04}$ & Rock & 10 \\
-Kepler-80e & 4.64489 & 72.9$\pm$ 8.3 & 1.60$\pm$ 0.08 & 4.13$\pm$ 0.95 & 5.60$^{+1.54}_{-1.32}$ & Rock & 10 \\
-L 98-59c & 3.69040 & 11.9$\pm$ 1.5 & 1.35$\pm$ 0.07 & 2.46$\pm$ 0.31 & 5.55$^{+1.22}_{-1.01}$ & Rock & 11,12 \\
-L 168-9b & 1.40150 & 144.2$\pm$ 12.0 & 1.39$\pm$ 0.09 & 4.60$\pm$ 0.60 & 9.51$^{+2.53}_{-2.11}$ & Rock & 13 \\
-LHS 1140b & 24.73696 & 0.5$\pm$ 0.0 & 1.73$\pm$ 0.03 & 6.98$\pm$ 0.89 & 7.52$^{+1.11}_{-1.06}$ & Rock & 14 \\
-LHS 1140c & 3.77793 & 6.1$\pm$ 0.5 & 1.28$\pm$ 0.02 & 1.81$\pm$ 0.39 & 4.77$^{+1.09}_{-1.01}$ & Rock & 14
+GJ 357b & 3.93072 & 13.2$\pm$ 1.4 & 1.22$\pm$ 0.08 & 1.84$\pm$ 0.31 & 5.67$^{+1.75}_{-1.35}$ & Rocky & 1 \\
+GJ 1132b & 1.62892 & 19.4$\pm$ 4.0 & 1.13$\pm$ 0.06 & 1.66$\pm$ 0.23 & 6.39$^{+1.36}_{-1.30}$ & Rocky & 2,3 \\
+GJ 1214b & 1.58040 & 22.2$\pm$ 3.0 & 2.85$\pm$ 0.20 & 6.26$\pm$ 0.86 & 1.50$^{+0.44}_{-0.34}$ & Gaseous & 4 \\
+GJ 9827b & 1.20898 & 326.9$\pm$ 16.3 & 1.58$\pm$ 0.03 & 4.91$\pm$ 0.49 & 6.95$^{+0.81}_{-0.71}$ & Rocky & 5 \\
+GJ 9827c & 6.20147 & 37.0$\pm$ 1.8 & 2.02$\pm$ 0.05 & 4.04$\pm$ 0.84 & 2.71$^{+0.57}_{-0.55}$ & Intermediate & 5 \\
+HD 219134b & 3.09293 & 176.7$\pm$ 5.5 & 1.60$\pm$ 0.06 & 4.74$\pm$ 0.19 & 6.40$^{+0.75}_{-0.69}$ & Rocky & 6 \\
+HD 219134c & 6.76458 & 62.3$\pm$ 1.9 & 1.51$\pm$ 0.05 & 4.36$\pm$ 0.22 & 7.01$^{+0.83}_{-0.71}$ & Rocky & 6 \\
+K2-18b & 32.93962 & 1.2$\pm$ 0.1 & 2.71$\pm$ 0.07 & 8.63$\pm$ 1.35 & 2.40$^{+0.41}_{-0.40}$ & Gaseous & 7,8 \\
+K2-146b & 2.64460 & 19.2$\pm$ 2.0 & 2.05$\pm$ 0.06 & 5.77$\pm$ 0.18 & 3.72$^{+0.34}_{-0.30}$ & Intermediate & 9 \\
+K2-146c & 4.00498 & 11.0$\pm$ 1.1 & 2.19$\pm$ 0.07 & 7.49$\pm$ 0.24 & 3.96$^{+0.38}_{-0.38}$ & Intermediate & 9 \\
+Kepler-80b & 7.05246 & 41.8$\pm$ 4.8 & 2.67$\pm$ 0.10 & 6.93$\pm$ 0.70 & 2.02$^{+0.43}_{-0.35}$ & Gaseous & 10 \\
+Kepler-80c & 9.52355 & 28.0$\pm$ 3.2 & 2.74$\pm$ 0.12 & 6.74$\pm$ 0.86 & 1.82$^{+0.45}_{-0.39}$ & Gaseous & 10 \\
+Kepler-80d & 3.07222 & 126.5$\pm$ 14.5 & 1.53$\pm$ 0.09 & 6.75$\pm$ 0.51 & 10.46$^{+2.30}_{-2.04}$ & Rocky & 10 \\
+Kepler-80e & 4.64489 & 72.9$\pm$ 8.3 & 1.60$\pm$ 0.08 & 4.13$\pm$ 0.95 & 5.60$^{+1.54}_{-1.32}$ & Rocky & 10 \\
+L 98-59c & 3.69040 & 11.9$\pm$ 1.5 & 1.35$\pm$ 0.07 & 2.46$\pm$ 0.31 & 5.55$^{+1.22}_{-1.01}$ & Rocky & 11,12 \\
+L 168-9b & 1.40150 & 144.2$\pm$ 12.0 & 1.39$\pm$ 0.09 & 4.60$\pm$ 0.60 & 9.51$^{+2.53}_{-2.11}$ & Rocky & 13 \\
+LHS 1140b & 24.73696 & 0.5$\pm$ 0.0 & 1.73$\pm$ 0.03 & 6.98$\pm$ 0.89 & 7.52$^{+1.11}_{-1.06}$ & Rocky & 14 \\
+LHS 1140c & 3.77793 & 6.1$\pm$ 0.5 & 1.28$\pm$ 0.02 & 1.81$\pm$ 0.39 & 4.77$^{+1.09}_{-1.01}$ & Rocky & 15 \\
+LTT 3780b & 0.76845 & 106$\pm$ 20 & 1.33$\pm$ 0.08 & 3.12$\pm$ 0.55 & 7.33$^{+1.96}_{-1.64}$ & Rocky & 16 \\
+LTT 3780c & 12.25205 & 2.63$\pm$ 0.5 & 2.30$\pm$ 0.16 & 8.50$\pm$ 1.65 & 3.88$^{+1.19}_{-1.03}$ & Intermediate & 16
 \enddata
 \tablecomments{References: 1) \citealt{luque19} 2) \citealt{dittmann17b} 3) \citealt{bonfils18} 4) \citealt{harpsoe13} 
 5) \citealt{rice19} 6) \citealt{gillon17b}
 7) \citealt{benneke17} 8) \citealt{cloutier19a} 9) \citealt{hamann19} 10) \citealt{macdonald16}
-11) \citealt{kostov19} 12) \citealt{cloutier19c} 13) \citealt{astudillodefru19} 14) \citealt{ment19}.}
+11) \citealt{kostov19} 12) \citealt{cloutier19c} 13) \citealt{astudillodefru19} 14) \citealt{dittmann17a}
+15) \citealt{ment19} 16) \citealt{cloutier20}.}
 \end{deluxetable*}
 \capstarttrue
