--- a/refs.bib
+++ b/refs.bib
@@ -28305,3 +28305,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{kass95,
+  added-at = {2017-09-28T15:27:57.000+0200},
+  author = {Kass, Robert E. and Raftery, Adrian E.},
+  biburl = {https://www.bibsonomy.org/bibtex/20a1dfd0f204e42300e16a9ebd7a94969/thoni},
+  doi = {10.1080/01621459.1995.10476572},
+  eprint = {http://www.tandfonline.com/doi/pdf/10.1080/01621459.1995.10476572},
+  interhash = {cd122c30c9c556c1186f628b8478c515},
+  intrahash = {0a1dfd0f204e42300e16a9ebd7a94969},
+  journal = {Journal of the American Statistical Association},
+  keywords = {bayesfactor hyptrails significance},
+  number = 430,
+  pages = {773-795},
+  publisher = {Taylor & Francis},
+  timestamp = {2017-09-28T15:27:57.000+0200},
+  title = {Bayes Factors},
+  url = {/brokenurl#         http://www.tandfonline.com/doi/abs/10.1080/01621459.1995.10476572    },
+  volume = 90,
+  year = 1995
+}
